--- a/pages/experience.html
+++ b/pages/experience.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <title>Experience / Guía MLBB</title>
 </head>
@@ -52,116 +53,116 @@
             <h2>HÉROES</h2>
             <section id="galeria" class="container">
                 <div class="row ">
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/freya.jpg" alt="freya">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/chou.jpg" alt="chou">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/arlott.jpg" alt="arlott">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/joy.jpg" alt="joy">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/fredrinn.jpg" alt="fredrinn">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/julian.jpg" alt="julian">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/phoveus.jpg" alt="phoveus">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/yu-zhong.jpg" alt="yu-zhong">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/silvanna.jpg" alt="silvanna">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/masha.jpg" alt="masha">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/x-borg.jpg" alt="x-borg">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/terizla.jpg" alt="terizla">
                     </div>
                 </div>
                 <div class="row ">
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/badang.jpg" alt="badang">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/minsittar.jpg" alt="minsittar">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/thamuz.jpg" alt="thamuz">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/aldous.jpg" alt="aldous">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/jawhead.jpg" alt="jawhead">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/argus.jpg" alt="argus">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/lapu-lapu.jpg" alt="lapu-lapu">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/ruby.jpg" alt="ruby">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/sun.jpg" alt="sun">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/balmond.jpg" alt="balmond">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/bane.jpg" alt="bane">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/zilong.jpg" alt="zilong">
                     </div>
                 </div>
                 <div class="row ">
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/alice.jpg" alt="alice">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/hilda.jpg" alt="hilda">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/edith.jpg" alt="edith">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/khaleed.jpg" alt="khaleed">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/dyrroth.jpg" alt="dyrroth">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/esmeralda.jpg" alt="esmeralda">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/guinevere.jpg" alt="guinevere">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/martis.jpg" alt="martis">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/gatotkaca.jpg" alt="gatotkaca">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/alpha.jpg" alt="alpha">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/vexana.jpg" alt="vexana">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/belerick.jpg" alt="belerick">
                     </div>
                 </div>
@@ -181,5 +182,9 @@
     <span class="copyright">&copy;2023. VirginiaNardi. Pagina sin fines de lucro.</span>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script> 
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
 </body>
 </html>
