--- a/pages/gold.html
+++ b/pages/gold.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <title>Gold / Guía MLBB</title>
 </head>
@@ -48,75 +49,75 @@
         <h2>HÉROES</h2>
         <section id="galeria" class="container">
             <div class="row ">
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/beatrix.jpg" alt="beatrix">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/brody.jpg" alt="brody">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/popol-y-kupa.jpg" alt="popol-y-kupa">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/wan-wan.jpg" alt="wan-wan">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/kimmy.jpg" alt="kimmy">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/claude.jpg" alt="claude">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/lesley.jpg" alt="lesley">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/moskov.jpg" alt="moskov">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/miya.jpeg" alt="miya">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/layla.jpg" alt="layla">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/clint.jpg" alt="clint">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/bruno.jpg" alt="bruno">
                 </div>
             </div>
             <div class="row ">
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/karrie.jpg" alt="karrie">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/melissa.jpg" alt="melissa">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/natan.jpg" alt="natan">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/granger.jpg" alt="granger">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/hanabi.jpg" alt="hanabi">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/irithel.jpg" alt="irithel">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/yi-sun-shin.jpg" alt="yi-sun-shin">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/edith.jpg" alt="edith">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/roger.jpg" alt="roger">
                 </div>
             </div>
         </section>
     </main>
-
+    
     <!-- FOOTER -->
     <footer>
         <h3 class="juego"><a href="./gold.html">MOBILE LEGENDS</a></h3>
@@ -131,5 +132,9 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script> 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
