--- a/pages/jungle.html
+++ b/pages/jungle.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <title>Jungle / Guía MLBB</title>
 </head>
@@ -49,116 +50,116 @@
         <h2>HÉROES</h2>
         <section id="galeria" class="container">
             <div class="row ">
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/freya.jpg" alt="freya">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/chou.jpg" alt="chou">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/arlott.jpg" alt="arlott">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/fanny.jpg" alt="fanny">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/joy.jpg" alt="joy">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/julian.jpg" alt="julian">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/aulus.jpg" alt="aulus">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/paquito.jpg" alt="paquito">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/barats.jpg" alt="barats">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/baxia.jpg" alt="baxia">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/ling.jpg" alt="ling">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/kimmy.jpg" alt="kimmy">
                 </div>
             </div>
             <div class="row ">
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/hanzo.jpg" alt="hanzo">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/leomord.jpg" alt="leomord">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/selena.jpg" alt="selena">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/gusion.jpg" alt="gusion">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/lancelot.jpg" alt="lancelot">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/harley.jpg" alt="harley">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/natalia.jpg" alt="natalia">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/hayabusa.jpg" alt="hayabusa">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/karina.jpg" alt="karina">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/balmond.jpg" alt="balmond">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/saber.jpg" alt="saber">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/zilong.jpg" alt="zilong">
                 </div>
             </div>
             <div class="row ">
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/alucard.jpg" alt="alucard">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/roger.jpg" alt="roger">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/yin.jpg" alt="yin">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/aamon.jpg" alt="aamon">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/benedetta.jpg" alt="benedetta">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/dyrroth.jpg" alt="dyrroth">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/granger.jpg" alt="granger">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/martis.jpg" alt="martis">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/alpha.jpg" alt="alpha">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/cyclops.jpg" alt="cyclops">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/esmeralda.jpg" alt="esmeralda">
                 </div>
-                <div class="col-6 col-sm-4 col-md-3">
+                <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                     <img src="../media/natan.jpg" alt="natan">
                 </div>
             </div>
@@ -178,6 +179,10 @@
         </div>
         <span class="copyright">&copy;2023. VirginiaNardi. Pagina sin fines de lucro.</span>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
