--- a/pages/middle.html
+++ b/pages/middle.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <title>Middle / Guía MLBB</title>
 </head>
@@ -49,78 +50,78 @@
             <h2>HÉROES</h2>
             <section  id="galeria" class="container">
                 <div class="row ">
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/aurora.jpg" alt="aurora">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/novaria.jpg" alt="novaria">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/xavier.jpg" alt="xavier">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/yve.jpg" alt="yve">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/lylia.jpg" alt="lylia">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/kadita.jpg" alt="kadita">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/harith.jpg" alt="harith">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/lunox.jpg" alt="lunox">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/pharsa.jpg" alt="pharsa">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/zhask.jpg" alt="zhask">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/vexana.jpg" alt="vexana">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/kagura.jpg" alt="kagura">
                     </div>
                 </div>
                 <div class="row ">
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/nana.jpg" alt="nana">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/eudora.jpg" alt="eudora">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/cyclops.jpg" alt="cyclops">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/alice.jpg" alt="alice">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/gord.jpg" alt="gord">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/valentina.jpg" alt="valentina">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/luo-yi.jpg" alt="luo-yi">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/cecilon.jpg" alt="cecilon">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/vale.jpg" alt="vale">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/change.jpg" alt="change">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/valir.jpg" alt="valir">
                     </div>
-                    <div class="col-6 col-sm-4 col-md-3">
+                    <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                         <img src="../media/odette.jpg" alt="odette">
                     </div>
                 </div>
@@ -139,6 +140,10 @@
         </div>
         <span class="copyright">&copy;2023. VirginiaNardi. Pagina sin fines de lucro.</span>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
