--- a/pages/roam.html
+++ b/pages/roam.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <title>Roam / Guía MLBB</title>
 </head>
@@ -50,116 +51,116 @@
         <h2>HÉROES</h2>
         <section id="galeria" class="container">
             <div class="row ">
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/fanny.jpg" alt="fanny">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/akai.jpg" alt="akai">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/franco.jpg" alt="franco">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/floryn.jpg" alt="floryn">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/faramis.jpg" alt="faramis">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/mathilda.jpg" alt="mathilda">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/barats.jpg" alt="barats">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/atlas.jpg" alt="atlas">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/baxia.jpg" alt="baxia">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/minsittar.jpg" alt="minsittar">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/kaja.jpg" alt="kaja">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/uranus.jpg" alt="uranus">
             </div>
             </div>
             <div class="row ">
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/hylos.jpg" alt="hylos">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/grock.jpg" alt="grock">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/ruby.jpg" alt="ruby">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/lolita.jpg" alt="lolita">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/nana.jpg" alt="nana">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/tigreal.jpg" alt="tigreal">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/rafaela.jpg" alt="rafaela">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/angela.jpg" alt="angela">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/diggie.jpg" alt="diggie">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/estes.jpg" alt="estes">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/edith.jpg" alt="edith">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/gloo.jpg" alt="gloo">
             </div>
             </div>
             <div class="row ">
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/carmilla.jpg" alt="carmilla">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/khufra.jpg" alt="khufra">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/belerick.jpg" alt="belerick">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/gatotkaca.jpg" alt="gatotkaca">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/johnson.jpg" alt="johnson">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/novaria.jpg" alt="novaria">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/esmeralda.jpg" alt="esmeralda">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/balmond.jpg" alt="balmond">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/hilda.jpg" alt="hilda">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/jawhead.jpg" alt="jawhead">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/selena.jpg" alt="selena">
             </div>
-            <div class="col-6 col-sm-4 col-md-3">
+            <div class="col-6 col-sm-4 col-md-3" data-aos="zoom-in">
                 <img src="../media/leomord.jpg" alt="leomord">
             </div>
             </div>
@@ -179,5 +180,9 @@
         <span class="copyright">&copy;2023. VirginiaNardi. Pagina sin fines de lucro.</span>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script> 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
